<resources>
    <string name="app_name">Homework</string>
    <string name="content_description__movie_backdrop">Movie backdrop</string>
    <string name="content_description_movie_poster">Movie Poster</string>
    <string name="title_endgame">Avengers: Endgame</string>
    <string name="text_released">Released:</string>
    <string name="data_released">April 22, 2019</string>
    <string name="movie_trailer">movie trailer</string>
    <string name="overview">Overview:</string>
    <string name="endgame_trailer">https://youtu.be/hA6hldpSTF8</string>
    <string name="endgame_overview">After the devastating events of Avengers: Infinity War, the universe is in ruins due to the efforts of the Mad Titan, Thanos. With the help of remaining allies, the Avengers must assemble once more in order to undo Thanos\' actions and restore order to the universe once and for all, no matter what consequences may be in store.</string>
</resources>
