<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/back_image_size"
        android:id="@+id/iv_avengers"
        android:src="@drawable/endgame_background"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/content_description__movie_backdrop"/>
    <ImageView
        android:layout_width="116dp"
        android:layout_height="175dp"
        android:src="@drawable/endgame_image"
        android:layout_below="@id/iv_avengers"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:scaleType="centerCrop"
        android:id="@+id/iv_poster"
        android:contentDescription="@string/content_description_movie_poster" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/iv_poster"
        android:layout_toEndOf="@id/iv_poster"
        android:layout_marginStart="8dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_title"
            android:text="@string/title_endgame"
            android:textColor="@color/purple"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:gravity="start"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_released"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="4dp"
                android:id="@+id/tv_released"
                android:gravity="start"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_released"
                android:textSize="16sp"
                android:layout_marginTop="4dp"
                android:layout_marginStart="8dp"
                android:gravity="start"
                android:textColor="@color/black"
                android:id="@+id/tv_data_released"
                tools:text="2018-01-01"/>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/movie_trailer"
            android:id="@+id/b_movie_trailer" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overview"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_below="@id/iv_poster"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:id="@+id/tv_overview"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endgame_overview"
        android:layout_below="@id/tv_overview"
        android:textSize="14sp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="start"
        android:textColor="@color/grey"
        android:id="@+id/tv_overview_text"/>
</RelativeLayout>